--- a/imports/plugins/included/default-theme/client/styles/main.less
+++ b/imports/plugins/included/default-theme/client/styles/main.less
@@ -145,6 +145,9 @@
 @import "products/variantList.less";
 @import "products/productGrid.less";
 @import "products/productList.less";
+@import "products/productRatings.less";
+@import "products/productReviews.less";
+
 
 // Search
 @import "search/dashboard.less";
