feat(reviews and ratings): Implement product/shop reviews and ratings - create schemas and collections for reviews and ratings  - write Meteor methods for reviews and ratings  - create react components for reviews and ratings  - connect reviews and rating components to the backend in order to view and  manipulate reviews  - create shop reviews and rating route  [Finishes 152798583]

--- a/imports/plugins/included/default-theme/client/styles/products/productRatings.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productRatings.less
@@ -46,10 +46,10 @@
 .react-rater-star.is-active-half:before {
   color: rgb(238, 200, 31) !important;
 }
-.ratings-btn, .review-btn {
+.rui.btn-default.flat.ratings-btn, .rui.btn-default.flat.review-btn {
   margin-top: .5em;
-  background-color: #5cde86 !important;
-  color: white !important;
+  background-color: #5cde86;
+  color: white;
 }
 
 .react-rater-star.will-be-active {
