--- a/imports/plugins/included/default-theme/client/styles/products/productReviews.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productReviews.less
@@ -51,6 +51,11 @@
 .review-form{
   margin: .5em 0 25px 0;
 }
+.rui.btn-default.flat.close-btn{
+  color: @white;
+  background-color: @rui-danger;
+  margin-left: .2em;
+}
 @media (max-width: 991px) {
   .review-section {
     width: 100%;
