feat(reviews and ratings): Implement product reviews and ratings   - create schemas and collections for reviews and ratings   - write Meteor methods for reviews and ratings   - create react components for reviews and ratings   - connect reviews and rating components to the backend in order to view and manipulate reviews  - create shop reviews and rating route  [Finishes 152798583]

--- a/imports/plugins/included/default-theme/client/styles/main.less
+++ b/imports/plugins/included/default-theme/client/styles/main.less
@@ -145,6 +145,9 @@
 @import "products/variantList.less";
 @import "products/productGrid.less";
 @import "products/productList.less";
+@import "products/productRatings.less";
+@import "products/productReviews.less";
+@import "products/feedbackBadge.less";
 
 // Search
 @import "search/dashboard.less";
@@ -154,3 +157,6 @@
 
 // React-select
 @import "{}/node_modules/react-select/less/select.less";
+
+//shopRatingAndReview
+@import "shopRatingAndReview/shopRatingAndReview.less";
