feat(Landing-Page): Redesign Landing page - ensure page is reponsive

--- a/imports/plugins/included/default-theme/client/styles/cart/cartIcon.less
+++ b/imports/plugins/included/default-theme/client/styles/cart/cartIcon.less
@@ -4,7 +4,7 @@
   padding: @cart-icon-padding;
   border-radius: @cart-icon-border-radius;
   position: relative;
-  background-color: @cart-icon-bg;
+  background-color: #fe7922;
   height: @navbar-height;
 
   a i {
@@ -13,14 +13,14 @@
   }
 
   &:hover {
-    background-color: lighten(@cart-icon-bg, 2%);
+    background-color: #fe7922;
   }
 
   .badge {
     position: absolute;
     bottom: 4px;
     .right(1px);
-    background-color: @cart-icon-badge;
+    background-color: #fe7922;
   }
 
   .badge-warning {
