--- a/imports/plugins/included/default-theme/client/styles/main.less
+++ b/imports/plugins/included/default-theme/client/styles/main.less
@@ -152,5 +152,9 @@
 @import "search/search-type-toggle.less";
 @import "search/sortable-table.less";
 
+@import "advertise/advertiseCarousel.less";
+@import "featured-product/featuredProduct.less";
+@import "footer/footer.less";
+
 // React-select
 @import "{}/node_modules/react-select/less/select.less";
