feat(search): sorts and filters search result by price, vendor

--- a/imports/plugins/included/default-theme/client/styles/search/results.less
+++ b/imports/plugins/included/default-theme/client/styles/search/results.less
@@ -177,7 +177,35 @@
     width: 100%;
   }
 }
+.sort-filter {
+  width: 100%;
+  padding-left: 30px;
+  padding: 10px;
+  
+  .select-input {
+    float: left;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 
+  .price-input {
+    float: left;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    .form-input {
+      padding-top: 10px;
+
+      .input-text {
+        padding: 5px;
+      }
+
+      .input-field {
+        width: 50px;
+      }
+    }    
+  }
+}
 .search-modal {
   .product-grid-item {
     .overlay-description {
