feat(digital): implement sale of digital  products function - add isDigital and downloadLink columns to product and cart schema - add digital product component to product detail page - add function for  admin to upload digital product and store in firebase cloud - add function for user to be able to download digital product after successful payment for the product - add download link text in the completed order list page for user download the digital product

--- a/imports/plugins/included/default-theme/client/styles/cart/checkout.less
+++ b/imports/plugins/included/default-theme/client/styles/cart/checkout.less
@@ -248,12 +248,45 @@
   letter-spacing: 0.3px;
 }
 
+.order-details-title .title-button{
+  display: inline-flex;
+}
+
 .order-details-title p {
   font-weight: 600;
   font-size: 14px;
   font-style: italic;
   color: #bbbbbb;
   letter-spacing: 0.4px;
+}
+
+.order-details-title .download-link{
+  margin-left: 45px;
+  margin-top: 1px;
+  color: #1c98d4;
+  font-weight: 600;
+  font-size: 14px;
+  font-style: italic;
+
+}
+
+@media screen and (max-width: 480px) {
+  .order-details-title p {
+    font-weight: 400;
+    font-size: 10px;
+    font-style: italic;
+    color: #bbbbbb;
+  }
+
+  .order-details-title .download-link{
+    margin-left: 2px;
+    margin-top: 1px;
+    color: #1c98d4;
+    font-weight: 400;
+    font-size: 10px;
+    font-style: italic;
+  
+  }
 }
 
 .order-details-quantity {
