--- a/imports/plugins/included/default-theme/client/styles/main.less
+++ b/imports/plugins/included/default-theme/client/styles/main.less
@@ -148,6 +148,7 @@
 @import "products/productRatings.less";
 @import "products/productReviews.less";
 @import "products/feedbackBadge.less";
+@import "products/digitalProduct.less";
 
 // Search
 @import "search/dashboard.less";
