--- a/imports/plugins/included/default-theme/client/styles/products/productReviews.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productReviews.less
@@ -56,6 +56,21 @@
   background-color: @rui-danger;
   margin-left: .2em;
 }
+.socials{
+  margin-left: 300px; 
+  padding: 10px;
+  font-size: 24px 
+}
+.social-icons{
+  padding: 5px;
+}
+@media (max-width: 414px ){
+  .socials{
+    margin-left: 80px; 
+    padding: 5px;
+    font-size: 18px 
+  }
+}
 @media (max-width: 991px) {
   .review-section {
     width: 100%;
