feat(pages): implement static page management - installed meteot tinymce - ensure an admin can create staic pages

--- a/client/templates/orophin-template.html
+++ b/client/templates/orophin-template.html
@@ -3,13 +3,14 @@
     {{#if hasAdminAccess}}
     <div>
       {{> products}}
+      {{> layoutFooter}}
     </div>
     {{else}}
     <div>
       {{> advertiseCarousel}}
       {{> products}}
       {{> featuredProduct}}
-      {{> footer}}
+      {{> layoutFooter}}
     </div>
     {{/if}}
   </main>
