--- a/imports/plugins/included/default-theme/client/styles/products/productDetail.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productDetail.less
@@ -21,6 +21,24 @@
   text-align: center;
 }
 
+section.rui.item.full.start.axis.vertical.feedback-badge-wrapper {
+  padding-right: 5%;
+}
+
+div.rmq-7f6f8dd6.rui.item.half.start.axis.vertical {
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+ul.row.review-list {
+  padding-left: 6%;
+}
+
+header.rui.item.full.start.axis.vertical.pdp.header {
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
 .pdp.header h1,
 .pdp.header .title-edit-input  {
   text-align: center;
