--- a/imports/plugins/included/default-theme/client/styles/variables.less
+++ b/imports/plugins/included/default-theme/client/styles/variables.less
@@ -8,7 +8,7 @@
 // --------------------------------------------------
 
 //== Colors
-@reaction-brand: #1999dd;
+@reaction-brand: #fe7922;
 
 // All colors that should be used in Reaction.
 // We should be using these variables, not bootstraps @brand-{} variables
@@ -33,14 +33,14 @@
 @rui-brand-dark-active: #7d929d;
 @rui-brand-dark-text: #23566D;
 
-@rui-info: #94e8d1;
+@rui-info: #ff9350;
 @rui-info-bg: #edfdf8;
 @rui-info-disabled: #d9ece6;
 @rui-info-hover: #79dcc1;
 @rui-info-active: #83b9aa;
 @rui-info-text: #447467;
 
-@rui-success: #5cde86;
+@rui-success: #fe7922;
 @rui-success-hover: #37cd68;
 @rui-success-active: #58c47b;
 @rui-success-disabled: #b4ddc1;
