--- a/imports/plugins/included/default-theme/client/styles/layout/footer.less
+++ b/imports/plugins/included/default-theme/client/styles/layout/footer.less
@@ -1,7 +1,6 @@
 /* Set the fixed height of the footer here */
 .footer-default {
   position: relative;
-  padding: 40px 20px;
   background-color: @footer-default-bg;
 
   a {
@@ -10,5 +9,89 @@
     &:hover {
       color: @footer-default-color-hover;
     }
+  }
+}
+
+footer {
+  background-color: @footer-bg-color;
+  margin-top: 30px;
+  padding: 6%;
+  color: @footer-text-color;
+  font-size: 12px;
+}
+
+a {
+  cursor: pointer;
+}
+
+.footer-align {
+  text-align: right;
+}
+
+.footer-join {
+  text-align: left;
+}
+
+@media(max-width: 1000px) {
+  footer {
+    background-color: @footer-bg-color;
+    margin-top: 30px;
+    padding: 6%;
+    color: @footer-text-color;
+    font-size: 12px;
+  }
+
+  a {
+    cursor: pointer;
+  }
+
+  .footer-align {
+    text-align: right;
+  }
+
+  .footer-join {
+    text-align: left;
+  }
+
+  .paystack-image {
+    width: 200px
+  }
+
+  .footer-text {
+    font-size: 8px;
+  }
+}
+
+@media(max-width: 700px){
+  footer {
+    background-color: @footer-bg-color;
+    margin-top: 30px;
+    padding: 6%;
+    color: @footer-text-color;
+    font-size: 12px;
+  }
+
+  a {
+    cursor: pointer;
+  }
+
+  .footer-align {
+    padding-top: 5px;
+    text-align: center;
+  }
+
+  .footer-join {
+    padding-top: 5px;
+    text-align: center;
+  }
+
+  .paystack-image {
+    padding-top: 5px;
+    width: 130px;
+  }
+
+  .footer-text {
+    padding-top: 10px;
+    font-size: 8px;
   }
 }
