--- a/imports/plugins/included/default-theme/client/styles/main.less
+++ b/imports/plugins/included/default-theme/client/styles/main.less
@@ -126,6 +126,7 @@
 @import "dashboard/settings.less";
 @import "dashboard/tables.less";
 @import "dashboard/widget.less";
+@import "staticPages/staticPages.less";
 
 // Layout
 @import "layout/layout.less";
@@ -157,7 +158,6 @@
 
 @import "advertise/advertiseCarousel.less";
 @import "featured-product/featuredProduct.less";
-@import "footer/footer.less";
 
 // React-select
 @import "{}/node_modules/react-select/less/select.less";
