--- a/imports/plugins/included/default-theme/client/styles/navbar.less
+++ b/imports/plugins/included/default-theme/client/styles/navbar.less
@@ -10,6 +10,11 @@
   padding-left: 5%;
 }
 
+.static-dropdown {
+  padding-top: 10px !important;
+  color: rgb(0, 0, 0) !important;
+}
+
 @media (max-width: 640px) {
   .rui.navbar {
   .display(flex);
