--- a/imports/plugins/included/default-theme/client/styles/products/productGrid.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productGrid.less
@@ -415,5 +415,6 @@
 }
 
 .modal-footer .rui.btn-default.flat.btn-color {
-  background-color: #5cde86;
+  background-color: #fe7922;
+  color: white;
 }
