--- a/imports/plugins/included/default-theme/client/styles/button.less
+++ b/imports/plugins/included/default-theme/client/styles/button.less
@@ -250,7 +250,7 @@
   border-color: @btn-flat-cta-border;
 }
 
-.btn-block {
+.btn-success {
   display: block;
   width: 100%;
   background-color: #fff;
